--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,6 @@
   </head>
 
   <body>
-    
       <nav class="navbar navbar-inverse">
         <div class="box">
         <div class="navbar-header navbar-left">
@@ -57,8 +56,16 @@
     <div class="box">
       <footer class="footer">
         <P class="text-right">CopyRight Infratop.inc</P>
+        <div id="container">
+          <div id="theTarget">
+            <div class="image1"></div>
+            <div class="image2"></div>
+            <div class="image3"></div>
+            <div class="image4"></div>
+            <div class="image5"></div>
+          </div>
+        </div>
       </footer>
     </div>
-   
   </body>
 </html>
