--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -3,3 +3,5 @@
     <h1>welcome to <span class="glyphicon glyphicon-book" aria-hidden="true"></span> Bookers      !!</h1>
   </div>
 </nav>
+
+<h1 class="jquery">Hello jQuery</h1>
